--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-.header li {
+.header ul {
 	font-style: bold;
 	font-size: 18px;
 	position: center;
@@ -6,8 +6,6 @@
 
 .Main-Picture img {
 	background-image: center;
-	margin-right: 0px;
-	margin-left: 0px;
 }
 
 .Main-Picture p {
