--- a/main.css
+++ b/main.css
@@ -4,13 +4,15 @@
 	position: center;
 }
 
-.Main-Picture img {
-	position: center;
+.Main-Picture img.block-img {
+	margin-left: auto;
+	margin-right: auto;
 }
 
-.Main-Picture p {
-	position: center;
-	font-size: 10px;
+.Main-Picture p.block {
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 30px;
 	font-style: bold;
 }
 
