--- a/main.css
+++ b/main.css
@@ -5,11 +5,13 @@
 }
 
 .Main-Picture img.block-img {
+	display: block; 
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .Main-Picture p.block {
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 30px;
