--- a/main.css
+++ b/main.css
@@ -6,14 +6,14 @@
 
 .Main-Picture img.block-img {
 	display: block; 
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
+	text-align: center;
 }
 
 .Main-Picture p.block {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
+	text-align: center;
 	font-size: 30px;
 	font-style: bold;
 }
