--- a/main.css
+++ b/main.css
@@ -1,10 +1,8 @@
 .header ul {
-	font-size: 18px;
 	margin: auto;
 }
 
-.Main-Picture img.block-img {
-	display: block; 
+.Main-Picture img { 
 	margin: auto;
 	text-align: center;
 }
@@ -17,6 +15,5 @@
 }
 
 .Me a{
-	position: center;
-	padding: auto;
+	margin: auto;
 }
