--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
+@charset "utf-8";
 #menu {
 	padding: 0;
-	margin: 0;
+	margin-left: 550px; /*change this to move the left margin */
 }
 
 #menu li {
-	list-style-type: none;
+	list-style-type: disc; /*this change the bullet point appearance*/
 }
 
 .Main-Picture img { 
@@ -15,12 +16,14 @@
 
 .Main-Picture p.block {
 	display: block;
-	margin: auto;
+	margin: content;
 	padding: auto;
 	text-align: center;
 	font-size: 30px;
+	
 }
 
 .Me a{
 	margin: auto;
 }
+
