--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -274,7 +274,7 @@ section.success a.active {
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #fff;
-    color: ##89cff0;
+    color: ##2c3e50;
     background: #fff;
 }
 
