--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -566,7 +566,7 @@ th {
 .glyphicon-ban-circle:before {
   content: "\e090";
 }
-.glyphicon-arrow-left:before {
+.glyphicon-ar-left:before {
   content: "\e091";
 }
 .glyphicon-arrow-right:before {
