--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3129,8 +3129,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-success {
   color: #ffffff;
-  background-color: #89cff0;
-  border-color: #89cff0;
+  background-color: #2c3e50;
+  border-color: #2c3e50;
 }
 .btn-success:hover,
 .btn-success:focus,
