--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -45,7 +45,7 @@ template {
   display: none;
 }
 a {
-  background-color: transparent;
+  background-color: #2c3e50;
 }
 a:active,
 a:hover {
@@ -3139,8 +3139,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
   color: #ffffff;
-  background-color: #128f76;
-  border-color: #11866f;
+  background-color: #89cff0;
+  border-color: #89cff0;
 }
 .btn-success:active,
 .btn-success.active,
