--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -264,8 +264,7 @@ section.success a.active {
     margin-top: 15px;
     border: solid 2px #fff;
     font-size: 20px;
-    color: #fff;
-    background: 0 0;
+    color: #89cff0;
     transition: all .3s ease-in-out;
 }
 
