--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -190,7 +190,7 @@ section.success a:focus,
 section.success a:active,
 section.success a.active {
     outline: 0;
-    color: #fff;
+    color: #2c3e50;
 }
 
 @media(max-width:767px) {
@@ -274,7 +274,7 @@ section.success a.active {
 .btn-outline.active {
     border: solid 2px #fff;
     color: #2c3e50;
-    background: #fff;
+    background: #89cff0;
 }
 
 .floating-label-form-group {
