--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -182,7 +182,10 @@ section h2 {
 section.success {
     color: #fff;
     background: #89cff0;
-    transition: all .3s ease-in-out;
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+    transition-delay: initial;
 }
 
 section.success a,
