--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3131,6 +3131,10 @@ fieldset[disabled] .btn-primary.active {
   color: #ffffff;
   background-color: #2c3e50;
   border-color: #2c3e50;
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+  transition-delay: initial;
 }
 .btn-success:hover,
 .btn-success:focus,
