--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -227,7 +227,7 @@ section.success a.active {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
-    opacity: 1;
+    color: #89cff0;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content {
