--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -355,13 +355,21 @@ footer .footer-below {
     background-color: #233140;
 }
 
-.icons-connect {
+.icons-twit {
     border-radius: 50%;
     width: 35px;
     height: 35px;
 }
 
 .icons-fb {
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    padding-bottom: 3px;
+    padding-right: 1px;
+}
+
+.icons-git {
     border-radius: 50%;
     width: 35px;
     height: 35px;
