--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -388,6 +388,7 @@ footer .footer-below {
     width: 35px;
     height: 35px;
     padding-bottom: 3px;
+    padding-left: 1px;
 }
 
 .btn-social {
