--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -64,6 +64,7 @@ hr.star-light {
 hr.star-light:after {
     color: #fff;
     background-color: #89cff0;
+    background-attachment: fixed;
 }
 
 hr.star-primary {
@@ -73,6 +74,7 @@ hr.star-primary {
 hr.star-primary:after {
     color: #2c3e50;
     background-color: #fff;
+    background-attachment: fixed;
 }
 
 .img-centered {
