--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -7,6 +7,7 @@ body {
     overflow-x: hidden;
     background-attachment: fixed;
     background-size: 100% 100%;
+    padding-bottom: 500px;
 }
 
 p {
