--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -88,7 +88,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: url("images/door-banner.jpeg");
+    background: #89cff0;
     background-attachment: fixed;
     background-size: 100% 100%;
     padding-bottom: 500px;
