--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -88,10 +88,13 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
+    padding-bottom: 500px;
+}
+
+.banner {
     background-image: url("images/door-banner.jpeg");
     background-attachment: fixed;
     background-size: 100% 100%;
-    padding-bottom: 500px;
 }
 
 header .container {
