--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -68,13 +68,11 @@ hr.star-light:after {
 }
 
 hr.star-primary {
-    border-color: #2c3e50;
+    border-color: #31271C;
 }
 
 hr.star-primary:after {
-    color: #2c3e50;
-    background-color: #fff;
-    background-attachment: fixed;
+    color: #31271C;
 }
 
 .img-responsive {
