--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -122,6 +122,7 @@ header .intro-text .name {
 header .intro-text .skills {
     font-size: 20px;
     font-weight: 300;
+    padding-right: 75px;
 }
 
 @media(min-width:768px) {
