--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -46,7 +46,6 @@ hr.star-primary {
     text-align: center;
 }
 
-hr.star-light:after,
 hr.star-primary:after {
     content: "\f005";
     display: inline-block;
@@ -56,6 +55,15 @@ hr.star-primary:after {
     font-family: FontAwesome;
     font-size: 2em;
 }
+
+hr.star-light:after {
+    content: "\f005";
+    display: inline-block;
+    position: relative;
+    top: -.8em;
+    padding: 0 .25em;
+    font-family: FontAwesome;
+    font-size: 2em;
 
 hr.star-light {
     border-color: #31271C;
@@ -122,6 +130,7 @@ header .intro-text .name {
 header .intro-text .skills {
     font-size: 30px;
     font-weight: normal;
+    padding-right: 30px;
 }
 
 @media(min-width:768px) {
