--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -46,6 +46,7 @@ hr.star-primary {
     text-align: center;
 }
 
+hr.star-light:after,
 hr.star-primary:after {
     content: "\f005";
     display: inline-block;
@@ -55,15 +56,6 @@ hr.star-primary:after {
     font-family: FontAwesome;
     font-size: 2em;
 }
-
-hr.star-light:after {
-    content: "\f005";
-    display: inline-block;
-    position: relative;
-    top: -.8em;
-    padding: 0 .25em;
-    font-family: FontAwesome;
-    font-size: 2em;
 
 hr.star-light {
     border-color: #31271C;
