--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -125,6 +125,12 @@ header .intro-text .skills {
     padding-right: 30px;
 }
 
+header .line-separator {
+    height: 1px;
+    background: #31271C;
+    border-bottom: 1px solid #313030;
+}
+
 @media(min-width:768px) {
     header .container {
         padding-top: 200px;
