--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -122,13 +122,17 @@ header .intro-text .name {
 header .intro-text .skills {
     font-size: 30px;
     font-weight: normal;
-    padding-right: 30px;
+    padding-right: 35px;
 }
 
-header .line-separator {
-    height: 1px;
-    background: #31271C;
-    border-bottom: 1px solid #313030;
+header hr .line-separator{
+content: "\f005";
+    display: inline-block;
+    position: relative;
+    top: -.8em;
+    padding: 0 .25em;
+    font-family: FontAwesome;
+    font-size: 2em;
 }
 
 @media(min-width:768px) {
