--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -122,7 +122,7 @@ header .intro-text .name {
 header .intro-text .skills {
     font-size: 30px;
     font-weight: normal;
-    padding-right: 35px;
+    text-align: center;
 }
 
 header hr .line-separator{
