--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -125,6 +125,12 @@ header .intro-text .skills {
     text-align: center;
 }
 
+header hr {
+    margin-top: 21px;
+    margin-bottom: 21px;
+    border: 0;
+    border-top: 1px solid #31271C;
+
 header hr .line-separator{
 content: "\f005";
     display: inline-block;
