--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -130,8 +130,11 @@ header hr {
     margin-bottom: 21px;
     border: 0;
     border-top: 1px solid #31271C;
+    position: relative;
+    width: 25%;
+}
 
-header hr .line-separator{
+header hr .line-separator {
 content: "\f005";
     display: inline-block;
     position: relative;
