--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -384,7 +384,7 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #31271c;
+    background-color: #574f46;
 }
 
 .icons-twit {
