--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -419,8 +419,7 @@ footer .footer-below {
     border-radius: 50%;
     width: 35px;
     height: 35px;
-    padding-bottom: 3px;
-    padding-left: 1px;
+    position: relative;
 }
 
 .btn-social {
