--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -419,7 +419,7 @@ footer .footer-below {
     border-radius: 50%;
     width: 35px;
     height: 35px;
-    position: relative;
+    padding-bottom: 1px;
 }
 
 .btn-social {
