--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -150,6 +150,10 @@ content: "\f005";
     padding-right: 450px;
 }
 
+.inline-about {
+    display: inline-block;
+}
+
 @media(min-width:768px) {
     header .container {
         padding-top: 200px;
