--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -74,8 +74,10 @@ hr.star-primary:after {
 }
 
 .img-responsive {
+    max-height: 150px;
     border-radius: 50%;
     padding top: 50px;
+    padding-left: 250px;
 }
 
 .img-centered {
