--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -157,6 +157,12 @@ content: "\f005";
     display: inline;
 }
 
+.port-background {
+    background-image: url("/images/open-door.jpeg");
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+
 @media(min-width:768px) {
     header .container {
         padding-top: 200px;
