--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4671,7 +4671,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .disabled > a:hover,
 .pagination > .disabled > a:focus {
   color: #ecf0f1;
-  background-color: #3be6c4;
+  background-color: #574f46;
   border-color: transparent;
   cursor: not-allowed;
 }
@@ -6767,7 +6767,7 @@ input:focus {
 .pager .disabled > a:hover,
 .pager .disabled > a:focus,
 .pager .disabled > span {
-  background-color: #3be6c4;
+  background-color: #574f46;
 }
 .close {
   color: #fff;
