--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -478,6 +478,10 @@ footer .footer-below {
     outline: 0;
 }
 
+.portfolio-modal:hover {
+    background-color: #574f46;
+}
+
 .portfolio-modal .modal-content {
     padding: 100px 0;
     min-height: 100%;
