--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -163,6 +163,11 @@ content: "\f005";
     background-size: 100% 100%;
 }
 
+.top-button {
+    padding-top: 20px;
+    padding-bottom: 60px;
+}
+
 @media(min-width:768px) {
     header .container {
         padding-top: 200px;
