--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -416,35 +416,55 @@ footer .footer-below {
     border-radius: 50%;
     width: 35px;
     height: 35px;
-    display: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .icons-fb {
     border-radius: 50%;
     width: 35px;
     height: 35px;
-    display: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .icons-git {
     border-radius: 50%;
     width: 35px;
     height: 35px;
-    display: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .icons-link {
     border-radius: 50%;
     width: 35px;
     height: 35px;
-    display: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .icons-goog {
     border-radius: 50%;
     width: 35px;
     height: 35px;
-    display: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .btn-social {
