--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -419,6 +419,7 @@ footer .footer-below {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
 }
 
 .icons-fb {
@@ -428,6 +429,7 @@ footer .footer-below {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
 }
 
 .icons-git {
@@ -437,6 +439,7 @@ footer .footer-below {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
 }
 
 .icons-link {
@@ -446,6 +449,7 @@ footer .footer-below {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
 }
 
 .icons-goog {
@@ -455,6 +459,7 @@ footer .footer-below {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
 }
 
 .btn-social {
