--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -419,7 +419,7 @@ footer .footer-below {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .icons-fb {
