--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -420,6 +420,7 @@ footer .footer-below {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: auto;
+    vertical-align: middle;
 }
 
 .icons-fb {
