--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -189,7 +189,8 @@ content: "\f005";
     }
 
     .navbar-fixed-top .navbar-brand {
-        font-size: 1em;
+        font-size: 1.5em;
+        text-transform: none;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -200,7 +201,8 @@ content: "\f005";
     }
 
     .navbar-fixed-top.navbar-shrink .navbar-brand {
-        font-size: 1em;
+        font-size: 1.25em;
+        text-transform: none;
     }
 }
 
