--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -189,8 +189,9 @@ content: "\f005";
     }
 
     .navbar-fixed-top .navbar-brand {
-        font-size: 1.5em;
+        font-size: 2em;
         text-transform: none;
+        font-weight: normal;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -201,8 +202,9 @@ content: "\f005";
     }
 
     .navbar-fixed-top.navbar-shrink .navbar-brand {
-        font-size: 1.25em;
+        font-size: 1.5em;
         text-transform: none;
+        font-weight: normal;
     }
 }
 
