--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -485,6 +485,17 @@ footer .footer-below {
     line-height: 45px;
 }
 
+.btn-social-top {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #fff;
+    border-radius: 100%;
+    text-align: center;
+    font-size: 20px;
+    line-height: 45px;
+}
+
 .btn:focus,
 .btn:active,
 .btn.active {
