--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -163,12 +163,8 @@ content: "\f005";
 
 .port-background {
     background-image: url(/images/open-door.svg);
-    width: 100%;
     background-attachment: fixed;
-    background-size: cover;
-    height: 0;
-    padding: 0;
-    padding-bottom: calc(100% * 3 / 4);
+    background-size: 100% 100%;
 }
 
 .top-button {
@@ -476,17 +472,6 @@ footer .footer-below {
 
 .btn-social {
     display: inline-block;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #fff;
-    border-radius: 100%;
-    text-align: center;
-    font-size: 20px;
-    line-height: 45px;
-}
-
-.btn-social-top {
-    display: block;
     width: 50px;
     height: 50px;
     border: 2px solid #fff;
