--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -97,12 +97,10 @@ header {
 
 .banner {
     background-image: url(/images/door-banner.svg);
-    width: 100%;
     background-attachment: fixed;
-    background-size: cover;
-    height: 0;
-    padding: 0;
-    padding-bottom: calc(100% * 3 / 4);
+    display: block;
+    background-repeat: none;
+    background-size: 100% 100%;
 }
 
 header .container {
@@ -164,6 +162,8 @@ content: "\f005";
 .port-background {
     background-image: url(/images/open-door.svg);
     background-attachment: fixed;
+    display: block;
+    background-repeat: none;
     background-size: 100% 100%;
 }
 
