--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -96,7 +96,7 @@ header {
 }
 
 .banner {
-    background-image: url(/images/door-banner.svg);
+    background-image: url(/images/door-banner.jpeg);
     background-attachment: fixed;
     display: block;
     background-repeat: none;
@@ -160,7 +160,7 @@ content: "\f005";
 }
 
 .port-background {
-    background-image: url(/images/open-door.svg);
+    background-image: url(/images/open-door.jpeg);
     background-attachment: fixed;
     display: block;
     background-repeat: none;
