--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -171,6 +171,7 @@ content: "\f005";
     color: #fff;
     padding-top: 50px;
     padding-bottom: 40px;
+    padding-left: 800px;
 }
 
 @media(min-width:768px) {
