--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -170,8 +170,8 @@ content: "\f005";
 .top-button {
     color: #fff;
     padding-top: 50px;
-    padding-bottom: 40px;
-    padding-left: 400px;
+    padding-bottom: 20px;
+    p
 }
 
 @media(min-width:768px) {
