--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -488,6 +488,16 @@ footer .footer-below {
     margin-top: 5px;
 }
 
+.btn-top {
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+}
+
 .btn-social {
     display: inline-block;
     width: 50px;
