--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -167,11 +167,10 @@ content: "\f005";
     background-size: 100% 100%;
 }
 
-.top-button {
+.bottom-padding {
     color: #fff;
     padding-top: 50px;
     padding-bottom: 5px;
-    p
 }
 
 @media(min-width:768px) {
