--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -172,6 +172,12 @@ content: "\f005";
     padding-bottom: 110px;
 }
 
+@media(max-width:430px) {
+    header {
+        background-color: #ceccd1;
+    }
+}
+
 @media(min-width:768px) {
     header .container {
         padding-top: 200px;
