--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -173,7 +173,7 @@ content: "\f005";
 }
 
 @media(max-width:430px) {
-    section {
+    section .banner {
         background-color: #ceccd1;
     }
 }
