--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -173,7 +173,13 @@ content: "\f005";
 }
 
 @media(max-width:430px) {
-    section .banner {
+    header {
+        background-color: #ceccd1;
+    }
+}
+
+@media(max-width:430px) {
+    section {
         background-color: #ceccd1;
     }
 }
