--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -174,13 +174,13 @@ content: "\f005";
 
 @media(max-width:430px) {
     header {
-        background-color: #ceccd1;
+        background-color: #e8e8e8;
     }
 }
 
 @media(max-width:430px) {
     section {
-        background-color: #ceccd1;
+        background-color: #e8e8e8;
     }
 }
 
