--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -100,7 +100,7 @@ header {
 }
 
 .banner {
-    background-image: url(/images/door-banner.png);
+    background-image: url(/images/door-banner.jpeg);
     background-attachment: fixed;
     display: block;
     background-repeat: none;
