--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -105,6 +105,7 @@ header {
     display: block;
     background-repeat: none;
     background-size: cover;
+    height: 100vh;
 }
 
 header .container {
