--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -599,7 +599,7 @@ footer .footer-below {
     width: 1px;
     height: 75px;
     margin-left: 35px;
-    background-color: #31271c;
+    background-color: #574F46;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
