--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -609,7 +609,7 @@ footer .footer-below {
     z-index: 1052;
     width: 1px;
     height: 75px;
-    background-color: #31271c;
+    background-color: #574F46;
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
