--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6823,11 +6823,11 @@ a.list-group-item-danger.active:focus {
   background-color: #e43725;
 }
 .panel-default .close {
-  color: #31271c;
+  color: #574F46;
 }
 .modal .close {
-  color: #31271c;
+  color: #574F46;
 }
 .popover {
-  color: #31271c;
+  color: #574F46;
 }
