--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -111,7 +111,7 @@ header {
     background-attachment: fixed;
     display: block;
     background-repeat: none;
-    background-size: auto;
+    background-size: 100% auto;
 }
 
 header .container {
