--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -174,7 +174,7 @@ content: "\f005";
     background-attachment: fixed;
     display: block;
     background-repeat: none;
-    background-size: 100% 100%;
+    background-size: 100% auto;
 }
 
 .bottom-padding {
