--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -107,11 +107,11 @@ header {
 }
 
 .banner {
-    background-image: url(/images/door-banner.jpeg);
+    background-image: url(/images/door-banner.svg);
     background-attachment: fixed;
     display: block;
     background-repeat: none;
-    background-size: auto 100%;
+    background-size: auto;
 }
 
 header .container {
@@ -170,7 +170,7 @@ content: "\f005";
 }
 
 .port-background {
-    background-image: url(/images/open-door.jpeg);
+    background-image: url(/images/open-door.svg);
     background-attachment: fixed;
     display: block;
     background-repeat: none;
