--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -111,7 +111,7 @@ header {
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 100% 100%;
 }
 
 header .container {
