--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -174,7 +174,7 @@ content: "\f005";
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
-    background-size: auto auto;
+    background-size: 100% 100%;
 }
 
 .bottom-padding {
