--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -105,7 +105,7 @@ header {
 }
 
 .banner {
-    background-image: url(/images/door-banner.svg);
+    background-image: url(/images/door-banner.jpeg);
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
@@ -168,7 +168,7 @@ content: "\f005";
 }
 
 .port-background {
-    background-image: url(/images/open-door.svg);
+    background-image: url(/images/open-door.jpeg);
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
