--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -105,7 +105,7 @@ header {
 }
 
 .banner {
-    background-image: url(/images/door-banner.svg);
+    background-image: url(/images/door-banner1.svg);
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
