--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -109,7 +109,7 @@ header {
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 100% auto;
 }
 
 header .container {
