--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -106,7 +106,7 @@ header {
 
 .banner {
     background-image: url(/images/door-banner.jpeg);
-    background-attachment: fixed;
+    background-attachment: scroll;
     display: block;
     background-repeat: no-repeat;
     background-size: 100% auto;
