--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -172,7 +172,7 @@ content: "\f005";
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: 100% auto;
 }
 
 .bottom-padding {
