--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -93,7 +93,7 @@ hr.star-primary:after {
 }
 
 .img-centered-about {
-    background-image: url(/img/profile.png);
+    background-image: url(/images/profile.png);
     background-repeat: no-repeat;
     display: block;
     background-size: 50px 50px;
