--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -93,7 +93,7 @@ hr.star-primary:after {
 }
 
 .img-centered-about {
-    background-image: url(/images/profile.png) !important;
+    background-image: url(/images/door-banner.jpeg);
     background-repeat: no-repeat;
     display: block;
     background-size: 20% 20%;
