--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -94,6 +94,7 @@ hr.star-primary:after {
 
 .img-centered-about {
     background-image: url(/images/door-banner.jpeg);
+    background-attachment: scroll;
     background-repeat: no-repeat;
     display: block;
     background-size: 20% 20%;
