--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -93,7 +93,7 @@ hr.star-primary:after {
 }
 
 div .img-centered-about {
-    background-image: url(/images/door-banner.jpeg);
+    content: url(/images/door-banner.jpeg);
     background-attachment: scroll;
     background-repeat: no-repeat;
     display: inline;
