--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -94,7 +94,7 @@ hr.star-primary:after {
 
 div .img-centered-about {
     content: url(/img/profile.png);
-    float: center;
+    float: right;
     background-attachment: scroll;
     background-repeat: no-repeat;
     display: inline;
