--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -98,8 +98,9 @@ div .img-centered-about {
     background-attachment: scroll;
     background-repeat: no-repeat;
     display: inline;
-    background-size: 20% 20%;
+    background-size: 15% 15%;
     border-radius: 50%
+    padding-left: 250px;
 }
 
 .paragraph-about {
