--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -99,8 +99,7 @@ div .img-centered-about {
     background-repeat: no-repeat;
     display: inline;
     background-size: 15% 15%;
-    border-radius: 50%
-    padding-left: 250px;
+    border-radius: 50%;
 }
 
 .paragraph-about {
