--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -100,6 +100,7 @@ div .img-centered-about {
     display: inline;
     background-size: 15% 15%;
     border-radius: 50%;
+    padding-left: 250px;
 }
 
 .paragraph-about {
