--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -100,6 +100,8 @@ div .img-centered-about {
     margin: auto auto;
     background-size: 15% 15%;
     border-radius: 50%;
+    padding-top: 20px;
+    padding-bottom: 15px;
 }
 
 .paragraph-about {
