--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -121,7 +121,7 @@ header {
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 1789px 1341px;
 }
 
 header .container {
@@ -184,7 +184,7 @@ content: "\f005";
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 1789px 1341px;
 }
 
 .bottom-padding {
