--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -184,7 +184,7 @@ content: "\f005";
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
-    background-size: 150% auto;
+    background-size: fixed;
 }
 
 .bottom-padding {
