--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -118,22 +118,10 @@ header {
 
 .banner {
     background-image: url(/images/door-banner.jpeg);
-}
-
-figure {
-    width: 100%;
-    margin: auto auto;
-}
- 
-div .banner {
-    width: 100%;
-    padding-bottom: 100%; /* 1:1; */
-    position: relative;
-}
- 
-div .banner > div {
-    position: absolute;
-    top: 0; bottom: 0; left: 0; right: 0;
+    background-attachment: fixed;
+    display: block;
+    background-repeat: no-repeat;
+    background-size: auto;
 }
 
 header .container {
@@ -196,7 +184,7 @@ content: "\f005";
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
-    background-size: fixed;
+    background-size: auto;
 }
 
 .bottom-padding {
