--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -121,7 +121,7 @@ header {
     background-attachment: fixed;
     display: block;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 100% auto;
 }
 
 header .container {
