--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -98,7 +98,7 @@ div .img-centered-about {
     background-repeat: no-repeat;
     display: block;
     margin: auto auto;
-    background-size: 10%;
+    background-size: 40px 35px;
     border-radius: 50%;
     padding-top: 20px;
     padding-bottom: 15px;
