--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -97,7 +97,7 @@ div .img-centered-about {
     background-attachment: scroll;
     background-repeat: no-repeat;
     display: block;
-    background-position: centr;
+    background-position: center;
     margin: auto auto;
     background-size: 140px 135px;
     border-radius: 50%;
