--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -99,7 +99,7 @@ div .img-centered-about {
     display: block;
     background-position: center;
     background-origin: content-box;
-    background-size: cover;
+    background-size: 35% 35%;
     border-radius: 50%;
     padding-top: 400px;
     padding-bottom: 385px;
