--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -96,6 +96,7 @@ div .img-centered-about {
     background-image: url(/images/profile.png);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: 175px 175px;
 }
 
 .paragraph-about {
