--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -96,8 +96,7 @@ div .img-centered-about {
     background-image: url(/images/profile.png);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 575px 575px;
-    margin: 0;
+    background-size: contain;
 }
 
 .paragraph-about {
