--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -97,6 +97,7 @@ div .img-centered-about {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    border-radius: 50%;
 }
 
 .paragraph-about {
