--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -97,6 +97,8 @@ div .img-centered-about {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    max-width: 200px;
+    height: auto;
     border-radius: 50%;
 }
 
