--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -96,7 +96,7 @@ div .img-centered-about {
     background-image: url(/images/profile.png);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     width: 200px;
     height: auto;
     border-radius: 50%;
