--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -172,6 +172,12 @@ content: "\f005";
 h1 .navbar-heading{
     font-size: 5em;
     position: relative;
+    font-size: 2em;
+        text-transform: none;
+        font-weight: normal;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+        transition: all .3s;
 }
 
 .about-container {
