--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -170,7 +170,8 @@ content: "\f005";
 }
 
 .free {
-    font-size: 1.25em;
+    font-size: 1.45em;
+    font-family: lobster;
 }
 
 .about-container {
